This file contains a summary of changes in released versions.  Please read the
ChangeLog file for a more detailed listing of changes/bug fixes.

1.1.2_alpha5:
    New features:
     - libcurl support - cleaner fetching implementation
     - Another semi-useless action handler for --birthday, that shows
       developers whose birthday occurs during the current month.

    Bug fixes:
     - Fixed bug where longdesc's (in <pkg> tag of querycache.xml) were being
       assigned instead of appended, causing certain longdescriptions (those
       requiring >1 callback per <longdescription>) to be truncated, and thus
       invalid cache results.

1.1.2_alpha4:
    Lots of behind-the-scenes changes that should decrease the amount of time
    herdstat runs in ALL cases (although in most cases the difference is not
    noticable).  I ditched herdstat's global options template setup in favor
    of the good ol' singleton.  The convenience of the template setup did not
    overweigh the performance consequences.  This means the access functions
    now return references to the data, instead of copies.  Another result of
    this is that herdstat should now use less memory as well, although usually
    that is not an issue since in most cases herdstat will exit immediately.

    Bug fixes:
     - Fixed long time bug in pkg handler (-p) that caused metadata.xml's that
       don't list a herd (not even "no-herd") to not show up when --no-herd is
       specified.

1.1.2_alpha3:
    Bug fixes:
     - Fixed a bug in the dirname() function that was causing problems if the
       -H flag specified a file in the current directory.
     - Fixed bug that caused projectxml files to be fetched in the same dir as
       herds.xml even if -H or -C was specified (they should go in
       /var/lib/herdstat).

1.1.2_alpha2:
    Don't use pkg-config to set our xmlwrapp libs, as it links in 6 other libs
    that are unneeded.  This should result in a slightly smaller executable.