@@ -43,8 +43,7 @@ enum options_action_T
     action_versions,
     action_find,
     action_away,
-    action_fetch,
-    action_bday
+    action_fetch
 };
 
 class options
@@ -124,8 +123,9 @@ class options
         static void set_highlights(const std::string& v) { _highlights.assign(v); }
         static const std::string& locale() { return _locale; }
         static void set_locale(const std::string& v) { _locale.assign(v); }
-        static const std::string& field() { return _field; }
-        static void set_field(const std::string& v) { _field.assign(v); }
+
+        static const std::vector<std::string>& fields() { return _fields; }
+        static void add_field(const std::string& v) { _fields.push_back(v); }
 
         static options_action_T action() { return _action; }
         static void set_action(options_action_T v) { _action = v; }
@@ -173,7 +173,8 @@ class options
         static std::string _metacache_expire;
         static std::string _highlights;
         static std::string _locale;
-        static std::string _field;
+
+        static std::vector<std::string> _fields;
 
         static options_action_T _action;
 
